working with variables and profiles

--- a/settings/internal/com.kms.katalon.execution.webui.properties
+++ b/settings/internal/com.kms.katalon.execution.webui.properties
@@ -1,2 +1,7 @@
-#Wed Jul 31 14:35:22 CEST 2019
+#Thu Aug 01 14:53:07 CEST 2019
 execution.default.selectingCapturedObjectSelectorMethod="XPATH"
+execution.default.webUi.enablePageLoadTimeout=false
+execution.default.webUi.pageLoadTimeout=30
+execution.default.webUi.ignorePageLoadTimeOutException=false
+execution.default.webUi.actionDelay=0
+execution.default.waitForIEHanging=600
