--- a/settings/internal/com.kms.katalon.composer.testcase.properties
+++ b/settings/internal/com.kms.katalon.composer.testcase.properties
@@ -1,2 +1,2 @@
-#Tue Aug 06 17:42:02 CEST 2019
-testCaseTag="authetication,login"
+#Sat Aug 10 11:09:33 CEST 2019
+testCaseTag="authetication,authentication"
