--- a/settings/internal/com.kms.katalon.execution.properties
+++ b/settings/internal/com.kms.katalon.execution.properties
@@ -1,6 +1,8 @@
-#Thu Aug 01 14:53:07 CEST 2019
+#Sat Aug 10 10:25:09 CEST 2019
 execution.default.executionConfiguration="Chrome"
 execution.default.timeout=30
 execution.default.openReportAfterExecuting=false
 execution.default.quitDriversAfterExecutingTestCase=false
 execution.default.quitDriversAfterExecutingTestSuite=true
+report.takeScreenshotOption=true
+report.videoRecorderOption="{\\n  \\"enable\\"\: false,\\n  \\"videoFormat\\"\: \\"AVI\\",\\n  \\"videoQuality\\"\: \\"LOW\\",\\n  \\"allowedRecordIfFailed\\"\: true,\\n  \\"allowedRecordIfPassed\\"\: true\\n}"
