--- a/settings/internal/com.kms.katalon.execution.properties
+++ b/settings/internal/com.kms.katalon.execution.properties
@@ -1,11 +1,11 @@
-#Sat Aug 10 12:53:17 CEST 2019
+#Fri Sep 13 21:03:34 CEST 2019
 execution.default.executionConfiguration="Chrome"
 execution.default.timeout=30
 execution.default.openReportAfterExecuting=false
 execution.default.quitDriversAfterExecutingTestCase=false
 execution.default.quitDriversAfterExecutingTestSuite=true
 report.takeScreenshotOption=true
-report.videoRecorderOption="{\\n  \\"enable\\"\: false,\\n  \\"videoFormat\\"\: \\"AVI\\",\\n  \\"videoQuality\\"\: \\"LOW\\",\\n  \\"allowedRecordIfFailed\\"\: true,\\n  \\"allowedRecordIfPassed\\"\: true\\n}"
+report.videoRecorderOption="{\\n  \\"enable\\"\: true,\\n  \\"videoFormat\\"\: \\"AVI\\",\\n  \\"videoQuality\\"\: \\"LOW\\",\\n  \\"allowedRecordIfFailed\\"\: true,\\n  \\"allowedRecordIfPassed\\"\: true\\n}"
 mailConfig.encryptionEnabled=false
 mailConfig.host=""
 mailConfig.port=""
